--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@ a {
   color: #b1cfcd;
   display: block;
   margin-top: 1vh;
-  font-weight: 500;
+  /*font-weight: 500;*/
   font-size: 18px;
 }
 
