--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,10 @@ a {
   margin-bottom: 25px;
 }
 
+div.post span[class^="c"] {
+  color:  lightgray !important;
+}
+
 div#parchment-container {
   position: relative;
   width: 100%;
