Add chapters 6 and 7

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Pirata+One|Bilbo+Swash+Caps&display=swap');
 @import url('https://fonts.googleapis.com/css?family=MedievalSharp&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Bad+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here&display=swap');
 
 @font-face {
     font-family: nodesto;
